#ifndef PERSON_H
#define PERSON_H

class Person {


public:

    void scream();

    void lament();

};

#endif