#ifndef PERSONCONTROLLER_H
#define PERSONCONTROLLER_H

/**
 * @brief This is a person controller it creates an instance of
 * a person for interfacing.
 *
 */
class PersonController
{

public:
    /**
     * @brief This is the initializer for the conroller.
     *
     */
    void init();
};

#endif